# Rustcro

./: .gitignore  Cargo.toml  macros.json
.fleet/: run.json
src/: lib.rs  macros.rs  main.rs
src/config/: macros.json  mod.rs
src/gui/: mod.rs
src/macros/: mod.rs
src/macros/types/: mod.rs  typing.rs  vscode.rs
