[package]
name = "rustcro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enigo = "0.0.14"
chrono = "0.4.19"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.80"
egui = "0.18.1"
eframe = "0.18.0"
